--- a/expense/Info.plist
+++ b/expense/Info.plist
@@ -10,5 +10,16 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>expense-oauth</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>expense</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
